--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
       <h2>Conciliações</h2>
     </a>
 
-   <a class="card" href="https://grupodvbr.github.io/SISTEMA-CAP-GRUPO-DV/aprovacao.html">
-  <div class="icon">✅</div>
-  <h2>Aprovação de CAP</h2>
-  </a>
+   <a class="card" href="index.couvert.html">
+      <div class="icon">🎤</div>
+      <h2>Couvert</h2>
+    </a>
   <a class="card" href="index.abc.html">
       <div class="icon">ABC</div>
       <h2>ABC de Vendas</h2>
