--- a/index.couvert.html
+++ b/index.couvert.html
@@ -168,7 +168,7 @@
 
 <script>
 /*** CONFIG ***/
-const ABC_URL   = "YOUR_ABC_URL"; // retorna JSON array (print 2)
+const ABC_URL   = "https://script.google.com/macros/s/AKfycbxu0HjXsbvXr9OGYDAEfN8Kqyle4d2GFb26wu8aAcAtfM-RkcILV9AywDjf1Fu8rW_NwQ/exec"; // retorna JSON array (print 2)
 const SHEET_API = "YOUR_SHEET_API_URL"; // WebApp GAS (seção 3)
 const ANO = 2025;
 
