--- a/index.couvert.html
+++ b/index.couvert.html
@@ -169,7 +169,7 @@
 <script>
 /*** CONFIG ***/
 const ABC_URL   = "https://script.google.com/macros/s/AKfycbxu0HjXsbvXr9OGYDAEfN8Kqyle4d2GFb26wu8aAcAtfM-RkcILV9AywDjf1Fu8rW_NwQ/exec"; // retorna JSON array (print 2)
-const SHEET_API = "YOUR_SHEET_API_URL"; // WebApp GAS (seção 3)
+const SHEET_API = "https://script.google.com/macros/s/AKfycbzd0Fenj9212CE4twk03qvVt3CCLlyN9QeUf0mpErGIrKnZBNudW-g7GRlI79M0M7rxBg/exec"; // WebApp GAS (seção 3)
 const ANO = 2025;
 
 /*** STATE ***/
